--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -1,3 +1,4 @@
+/* ヘッダー */
 header .app-name {
     background-color:skyblue;
     /* headerデフォルト余白の打消し */
@@ -18,6 +19,7 @@ li.active {
     background-color:lightgrey;
 }
 
+/* メインコンテンツ */
 main {
     background-color:ghostwhite;
 }
@@ -27,6 +29,7 @@ table.table {
     margin-bottom:0; 
 }
 
+/* フッター */
 footer {
     background-color:skyblue;
 }
