追加：　講師登録のバリデーション機能を追加、ラベル位置変更

--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -19,11 +19,6 @@ li.active {
     background-color:lightgrey;
 }
 
-/* メインコンテンツ */
-main {
-    background-color:ghostwhite;
-}
-
 table.table {
     /* .tableデフォルト余白の打消し */
     margin-bottom:0; 
@@ -37,4 +32,14 @@ footer {
 footer p {
     /* pデフォルト余白の打消し */
     margin-bottom:0;
+}
+
+/* 一覧メインコンテンツ */
+main {
+    background-color:ghostwhite;
+}
+
+/* 登録フォーム */
+.form-control::placeholder {
+    color:lightgrey;
 }
