改善：　再予約ボタンの色をCSSで設定

--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -43,3 +43,9 @@ main {
 .form-control::placeholder {
     color:lightgrey;
 }
+
+/* 連絡者一覧 */
+.btn-re-reservation {
+    background-color:darkorange;
+    color:white;
+}
