修正：　再予約ボタンのpadding調整と、ナビバーのリンク先の追加
再予約ボタンの文字が2行に渡ってしまうため、paddingの幅を狭くした。
レイアウトのナビバーの「連絡者一覧」のリンク先にルートを指定した。

--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -48,4 +48,6 @@ main {
 .btn-re-reservation {
     background-color:darkorange;
     color:white;
+    padding-left:.50rem;
+    padding-right:.50rem;
 }
