修正：　一覧画面のメールアドレスのはみ出しの修正
講師一覧と連絡者一覧のメールアドレスが欄外にまではみ出していたため、
overflow-wrapで改行を指定した。

--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -39,6 +39,12 @@ main {
     background-color:ghostwhite;
 }
 
+/* 一覧画面のテーブル
+　メールアドレスのはみ出し防止 */
+.overflow {
+    overflow-wrap: break-word;
+}
+
 /* 登録フォーム */
 .form-control::placeholder {
     color:lightgrey;
