修正：　フッターを下部に固定
一覧表示の件数が少ないと、フッターが上に上がっていたため、cssで固定した。

--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -1,3 +1,10 @@
+/* ボディ */
+body {
+    display:flex;
+    flex-direction:column;
+    min-height:100vh;
+}
+
 /* ヘッダー */
 header .app-name {
     background-color:skyblue;
@@ -37,6 +44,7 @@ footer p {
 /* 一覧メインコンテンツ */
 main {
     background-color:ghostwhite;
+    flex:1;
 }
 
 /* 一覧画面のテーブル
